--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,6 +10,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>resumeServlet</servlet-name>
-        <url-pattern>/resume</url-pattern>
+        <url-pattern>/resume/*</url-pattern>
     </servlet-mapping>
 </web-app>
